sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * FFI-safe entity identifier.
 */
typedef uint64_t GoudEntityId;
/**
 * FFI-safe Sprite representation.
 */
typedef struct FfiSprite {
    /**
     * Texture handle (index and generation packed as u64).
     */
    uint64_t texture_handle;
    /**
     * Color tint red component (0.0 - 1.0).
     */
    float color_r;
    /**
     * Color tint green component (0.0 - 1.0).
     */
    float color_g;
    /**
     * Color tint blue component (0.0 - 1.0).
     */
    float color_b;
    /**
     * Color tint alpha component (0.0 - 1.0).
     */
    float color_a;
    /**
     * Source rectangle X position (if has_source_rect is true).
     */
    float source_rect_x;
    /**
     * Source rectangle Y position.
     */
    float source_rect_y;
    /**
     * Source rectangle width.
     */
    float source_rect_width;
    /**
     * Source rectangle height.
     */
    float source_rect_height;
    /**
     * Whether source_rect is set.
     */
    bool has_source_rect;
    /**
     * Flip horizontally flag.
     */
    bool flip_x;
    /**
     * Flip vertically flag.
     */
    bool flip_y;
    /**
     * Explicit render-order layer.
     */
    int32_t z_layer;
    /**
     * Anchor point X (normalized 0-1).
     */
    float anchor_x;
    /**
     * Anchor point Y (normalized 0-1).
     */
    float anchor_y;
    /**
     * Custom size width (if has_custom_size is true).
     */
    float custom_size_x;
    /**
     * Custom size height.
     */
    float custom_size_y;
    /**
     * Whether custom_size is set.
     */
    bool has_custom_size;
} FfiSprite;
/**
 * FFI-safe 2D vector representation.
 */
typedef struct FfiVec2 {
    /**
     * X component.
     */
    float x;
    /**
     * Y component.
     */
    float y;
} FfiVec2;
/**
 * FFI-safe Transform2D representation.
 */
typedef struct FfiTransform2D {
    /**
     * Position X in world space.
     */
    float position_x;
    /**
     * Position Y in world space.
     */
    float position_y;
    /**
     * Rotation angle in radians.
     */
    float rotation;
    /**
     * Scale along X axis.
     */
    float scale_x;
    /**
     * Scale along Y axis.
     */
    float scale_y;
} FfiTransform2D;
/**
 * FFI-compatible error code type.
 */
typedef int32_t GoudErrorCode;
/**
 * Opaque texture handle for FFI.
 */
typedef uint64_t GoudTextureHandle;
/**
 * An RGBA color with FFI-safe memory layout.
 */
typedef struct Color {
    /**
     * The red component of the color.
     */
    float r;
    /**
     * The green component of the color.
     */
    float g;
    /**
     * The blue component of the color.
     */
    float b;
    /**
     * The alpha (transparency) component of the color.
     */
    float a;
} Color;
/**
 * FFI-safe result type for returning success/failure status across the FFI boundary.
 */
typedef struct GoudResult {
    /**
     * The error code. `SUCCESS` (0) on success, error code on failure.
     */
    GoudErrorCode code;
    /**
     * True if the operation succeeded, false otherwise.
     */
    bool success;
} GoudResult;
/**
 * Creates a new engine context.
 */
struct GoudContextId goud_context_create(void);
/**
 * Destroys an engine context, freeing all associated resources.
 */
bool goud_context_destroy(struct GoudContextId context_id);
/**
 * Checks if a context ID is valid.
 */
bool goud_context_is_valid(struct GoudContextId context_id);
/**
 * Spawns a new empty entity in the world.
 */
uint64_t goud_entity_spawn_empty(struct GoudContextId context_id);
/**
 * Spawns multiple empty entities in a single batch.
 */
uint32_t goud_entity_spawn_batch(struct GoudContextId context_id, uint32_t count, uint64_t *out_entities);
/**
 * Despawns an entity, removing it and all its components from the world.
 */
GoudResult goud_entity_despawn(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Despawns multiple entities in a single batch.
 */
uint32_t goud_entity_despawn_batch(struct GoudContextId context_id, const uint64_t *entity_ids, uint32_t count);
/**
 * Checks if an entity is currently alive in the world.
 */
bool goud_entity_is_alive(struct GoudContextId context_id, uint64_t entity_id);
/**
 * Gets the total number of alive entities in the world.
 */
uint32_t goud_entity_count(struct GoudContextId context_id);
/**
 * Draws a textured sprite at the given position.
 */
bool goud_renderer_draw_sprite(struct GoudContextId context_id, GoudTextureHandle texture, float x, float y, float width, float height, float rotation, float r, float g, float b, float a);
/**
 * Draws a colored quad (no texture) at the given position.
 */
bool goud_renderer_draw_quad(struct GoudContextId context_id, float x, float y, float width, float height, float r, float g, float b, float a);
/**
 * Returns the forward direction vector (positive X axis after rotation).
 */
struct FfiVec2 goud_transform2d_forward(const struct FfiTransform2D *transform);
/**
 * Returns the right direction vector (positive Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_right(const struct FfiTransform2D *transform);
/**
 * Returns the backward direction vector (negative X axis after rotation).
 */
struct FfiVec2 goud_transform2d_backward(const struct FfiTransform2D *transform);
/**
 * Returns the left direction vector (negative Y axis after rotation).
 */
struct FfiVec2 goud_transform2d_left(const struct FfiTransform2D *transform);
/**
 * Creates a default Transform2D at the origin with no rotation and unit scale.
 */
struct FfiTransform2D goud_transform2d_default(void);
/**
 * Creates a Transform2D at the specified position with default rotation and scale.
 */
struct FfiTransform2D goud_transform2d_from_position(float x, float y);
/**
 * Creates a Transform2D at the origin with the specified rotation.
 */
struct FfiTransform2D goud_transform2d_from_rotation(float rotation);
/**
 * Creates a Transform2D at the origin with the specified rotation in degrees.
 */
struct FfiTransform2D goud_transform2d_from_rotation_degrees(float degrees);
/**
 * Creates a Transform2D at the origin with the specified scale.
 */
struct FfiTransform2D goud_transform2d_from_scale(float scale_x, float scale_y);
/**
 * Creates a Transform2D with uniform scale.
 */
struct FfiTransform2D goud_transform2d_from_scale_uniform(float scale);
/**
 * Creates a Transform2D looking at a target position.
 */
struct FfiTransform2D goud_transform2d_look_at(float pos_x, float pos_y, float target_x, float target_y);
/**
 * Transforms a point from local space to world space.
 */
struct FfiVec2 goud_transform2d_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Transforms a point from world space to local space.
 */
struct FfiVec2 goud_transform2d_inverse_transform_point(const struct FfiTransform2D *transform, float point_x, float point_y);
/**
 * Linearly interpolates between two transforms.
 */
struct FfiTransform2D goud_transform2d_lerp(struct FfiTransform2D from, struct FfiTransform2D to, float t);
/**
 * Translates the transform by the given offset in world space.
 */
void goud_transform2d_translate(struct FfiTransform2D *transform, float dx, float dy);
/**
 * Translates the transform in local space.
 */
void goud_transform2d_translate_local(struct FfiTransform2D *transform, float dx, float dy);
/**
 * Sets the position of the transform.
 */
void goud_transform2d_set_position(struct FfiTransform2D *transform, float x, float y);
/**
 * Rotates the transform by the given angle in radians.
 */
void goud_transform2d_rotate(struct FfiTransform2D *transform, float angle);
/**
 * Rotates the transform by the given angle in degrees.
 */
void goud_transform2d_rotate_degrees(struct FfiTransform2D *transform, float degrees);
/**
 * Sets the rotation angle in radians.
 */
void goud_transform2d_set_rotation(struct FfiTransform2D *transform, float rotation);
/**
 * Makes the transform look at a target position.
 */
void goud_transform2d_look_at_target(struct FfiTransform2D *transform, float target_x, float target_y);
/**
 * Sets the scale of the transform.
 */
void goud_transform2d_set_scale(struct FfiTransform2D *transform, float scale_x, float scale_y);
/**
 * Multiplies the current scale by the given factors.
 */
void goud_transform2d_scale_by(struct FfiTransform2D *transform, float factor_x, float factor_y);
/**
 * Sets the color tint for this sprite.
 */
void goud_sprite_set_color(struct FfiSprite *sprite, float r, float g, float b, float a);
/**
 * Creates a new sprite with the specified color tint (builder pattern).
 */
struct FfiSprite goud_sprite_with_color(struct FfiSprite sprite, float r, float g, float b, float a);
/**
 * Creates a new sprite with default settings.
 */
struct FfiSprite goud_sprite_new(uint64_t texture_handle);
/**
 * Creates a default sprite with an invalid texture handle.
 */
struct FfiSprite goud_sprite_default(void);
/**
 * Sets the source rectangle for sprite sheet rendering.
 */
void goud_sprite_set_source_rect(struct FfiSprite *sprite, float x, float y, float width, float height);
/**
 * Removes the source rectangle, rendering the full texture.
 */
void goud_sprite_clear_source_rect(struct FfiSprite *sprite);
/**
 * Creates a new sprite with the specified source rectangle (builder pattern).
 */
struct FfiSprite goud_sprite_with_source_rect(struct FfiSprite sprite, float x, float y, float width, float height);
/**
 * Sets the horizontal flip flag.
 */
void goud_sprite_set_flip_x(struct FfiSprite *sprite, bool flip);
/**
 * Sets the vertical flip flag.
 */
void goud_sprite_set_flip_y(struct FfiSprite *sprite, bool flip);
/**
 * Creates a new sprite with the specified horizontal flip (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip_x(struct FfiSprite sprite, bool flip);
/**
 * Creates a new sprite with the specified vertical flip (builder pattern).
 */
struct FfiSprite goud_sprite_with_flip_y(struct FfiSprite sprite, bool flip);
/**
 * Sets the anchor point with individual coordinates.
 */
void goud_sprite_set_anchor(struct FfiSprite *sprite, float x, float y);
/**
 * Creates a new sprite with the specified anchor (builder pattern).
 */
struct FfiSprite goud_sprite_with_anchor(struct FfiSprite sprite, float x, float y);
/**
 * Sets a custom size for the sprite.
 */
void goud_sprite_set_custom_size(struct FfiSprite *sprite, float width, float height);
/**
 * Removes the custom size, using texture dimensions.
 */
void goud_sprite_clear_custom_size(struct FfiSprite *sprite);
/**
 * Sets the texture handle for the sprite.
 */
void goud_sprite_set_texture(struct FfiSprite *sprite, uint64_t handle);