sdks/python/goud_engine/bindings.py

    
    def draw_sprite(self, texture: int, x: float, y: float,
                    width: float, height: float, rotation: float = 0.0,
                    color: Color = None) -> bool:
        """
        Draws a textured sprite at the given position.
        
        This is an immediate-mode draw call - the sprite is rendered immediately
        and not retained between frames. Call this each frame in your game loop.
        
        Args:
            texture: Texture handle from load_texture()
            x: X position (center of sprite)
            y: Y position (center of sprite)
            width: Width of the sprite
            height: Height of the sprite
            rotation: Rotation in radians (default 0.0)
            color: Color tint (default white/no tint)
        
        Returns:
            True on success, False on error.
        
        Example:
            tex_id = game.load_texture("player.png")
            game.draw_sprite(tex_id, 100, 100, 64, 64)
        """
        c = color or Color.white()
        return _lib.goud_renderer_draw_sprite(
            self._context_id, c_uint64(texture),
            c_float(x), c_float(y), c_float(width), c_float(height),
            c_float(rotation),
            c_float(c.r), c_float(c.g), c_float(c.b), c_float(c.a)
        )
    
    def draw_quad(self, x: float, y: float, width: float, height: float,
                  color: Color = None) -> bool:
        """
        Draws a colored quad (no texture) at the given position.
        
        This is an immediate-mode draw call - the quad is rendered immediately
        and not retained between frames. Call this each frame in your game loop.
        
        Args:
            x: X position (center of quad)
            y: Y position (center of quad)
            width: Width of the quad
            height: Height of the quad
            color: Color of the quad (default white)
        
        Returns:
            True on success, False on error.
        
        Example:
            game.draw_quad(100, 100, 50, 50, Color.red())
        """
        c = color or Color.white()
        return _lib.goud_renderer_draw_quad(
            self._context_id,
            c_float(x), c_float(y), c_float(width), c_float(height),
            c_float(c.r), c_float(c.g), c_float(c.b), c_float(c.a)
        )
    
    # =========================================================================
    # Entity Management
    # =========================================================================
    
    def spawn(self) -> "GameEntity":
        """Spawns a new empty entity and returns a GameEntity wrapper."""
        entity_id = _lib.goud_entity_spawn_empty(self._context_id)
        if entity_id == GoudEntityId.INVALID:
            raise GoudEngineError("Failed to spawn entity")
        return GameEntity(self, entity_id)
    
    def spawn_batch(self, count: int) -> List["GameEntity"]:
        """Spawns multiple empty entities and returns a list of GameEntity wrappers."""
        out_array = (c_uint64 * count)()
        actual = _lib.goud_entity_spawn_batch(self._context_id, c_uint32(count), out_array)
        return [GameEntity(self, entity_id) for entity_id in out_array[:actual]]
    
    def despawn_entity(self, entity_id: int) -> bool:
        """Despawns an entity by ID. Returns True if successful."""
        result = _lib.goud_entity_despawn(self._context_id, c_uint64(entity_id))
        return result.success
    
    def is_entity_alive(self, entity_id: int) -> bool:
        """Returns True if the entity is alive."""
        return _lib.goud_entity_is_alive(self._context_id, c_uint64(entity_id))
    
    def entity_count(self) -> int:
        """Returns the number of alive entities."""
        return _lib.goud_entity_count(self._context_id)
    
    # =========================================================================
    # Context Manager
    # =========================================================================
    
    def __enter__(self) -> "GoudGame":
        return self
    
    def __exit__(self, exc_type, exc_val, exc_tb):
        self.destroy()


class GameEntity:
    """
    Entity wrapper for use with GoudGame.
    
    Provides a convenient interface for entity operations within a game context.
    """
    
    def __init__(self, game: GoudGame, entity_id: int):
        self._game = game
        self._id = entity_id
    
    @property
    def id(self) -> int:
        """Gets the raw entity ID."""
        return self._id
    
    def is_alive(self) -> bool:
        """Returns True if this entity is still alive."""
        return self._game.is_entity_alive(self._id)
    
    def despawn(self):
        """Despawns this entity."""
        self._game.despawn_entity(self._id)
    
    def __repr__(self) -> str:
        return f"GameEntity({self._id})"


# =============================================================================
# FFI Function Signatures
# =============================================================================

def _setup_ffi_signatures():
    """Set up ctypes function signatures for type checking and proper return values."""
    
    # Context functions
    _lib.goud_context_create.argtypes = []
    _lib.goud_context_create.restype = GoudContextId
    
    _lib.goud_context_destroy.argtypes = [GoudContextId]
    _lib.goud_context_destroy.restype = c_bool
    
    _lib.goud_context_is_valid.argtypes = [GoudContextId]
    _lib.goud_context_is_valid.restype = c_bool
    
    # Entity functions
    _lib.goud_entity_spawn_empty.argtypes = [GoudContextId]
    _lib.goud_entity_spawn_empty.restype = c_uint64
    
    _lib.goud_entity_spawn_batch.argtypes = [GoudContextId, c_uint32, POINTER(c_uint64)]
    _lib.goud_entity_spawn_batch.restype = c_uint32
    
    _lib.goud_entity_despawn.argtypes = [GoudContextId, c_uint64]
    _lib.goud_entity_despawn.restype = GoudResult
    
    _lib.goud_entity_despawn_batch.argtypes = [GoudContextId, POINTER(c_uint64), c_uint32]
    _lib.goud_entity_despawn_batch.restype = c_uint32
    
    _lib.goud_entity_is_alive.argtypes = [GoudContextId, c_uint64]
    _lib.goud_entity_is_alive.restype = c_bool
    
    _lib.goud_entity_count.argtypes = [GoudContextId]
    _lib.goud_entity_count.restype = c_uint32
    
    # Transform2D factory functions
    _lib.goud_transform2d_default.argtypes = []
    _lib.goud_transform2d_default.restype = FfiTransform2D
    
    _lib.goud_transform2d_from_position.argtypes = [c_float, c_float]
    _lib.goud_transform2d_from_position.restype = FfiTransform2D
    
    _lib.goud_transform2d_from_rotation.argtypes = [c_float]
    _lib.goud_transform2d_from_rotation.restype = FfiTransform2D
    
    _lib.goud_transform2d_from_rotation_degrees.argtypes = [c_float]
    _lib.goud_transform2d_from_rotation_degrees.restype = FfiTransform2D
    
    _lib.goud_transform2d_from_scale.argtypes = [c_float, c_float]
    _lib.goud_transform2d_from_scale.restype = FfiTransform2D
    
    _lib.goud_transform2d_from_scale_uniform.argtypes = [c_float]
    _lib.goud_transform2d_from_scale_uniform.restype = FfiTransform2D
    
    _lib.goud_transform2d_look_at.argtypes = [c_float, c_float, c_float, c_float]
    _lib.goud_transform2d_look_at.restype = FfiTransform2D
    
    # Transform2D mutation functions
    _lib.goud_transform2d_translate.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_translate.restype = None
    
    _lib.goud_transform2d_translate_local.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_translate_local.restype = None
    
    _lib.goud_transform2d_set_position.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_set_position.restype = None
    
    _lib.goud_transform2d_rotate.argtypes = [POINTER(FfiTransform2D), c_float]
    _lib.goud_transform2d_rotate.restype = None
    
    _lib.goud_transform2d_rotate_degrees.argtypes = [POINTER(FfiTransform2D), c_float]
    _lib.goud_transform2d_rotate_degrees.restype = None
    
    _lib.goud_transform2d_set_rotation.argtypes = [POINTER(FfiTransform2D), c_float]
    _lib.goud_transform2d_set_rotation.restype = None
    
    _lib.goud_transform2d_look_at_target.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_look_at_target.restype = None
    
    _lib.goud_transform2d_set_scale.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_set_scale.restype = None
    
    _lib.goud_transform2d_scale_by.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_scale_by.restype = None
    
    # Transform2D direction functions
    _lib.goud_transform2d_forward.argtypes = [POINTER(FfiTransform2D)]
    _lib.goud_transform2d_forward.restype = Vec2
    
    _lib.goud_transform2d_right.argtypes = [POINTER(FfiTransform2D)]
    _lib.goud_transform2d_right.restype = Vec2
    
    _lib.goud_transform2d_backward.argtypes = [POINTER(FfiTransform2D)]
    _lib.goud_transform2d_backward.restype = Vec2
    
    _lib.goud_transform2d_left.argtypes = [POINTER(FfiTransform2D)]
    _lib.goud_transform2d_left.restype = Vec2
    
    # Transform2D point transformation
    _lib.goud_transform2d_transform_point.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_transform_point.restype = Vec2
    
    _lib.goud_transform2d_inverse_transform_point.argtypes = [POINTER(FfiTransform2D), c_float, c_float]
    _lib.goud_transform2d_inverse_transform_point.restype = Vec2
    
    # Transform2D interpolation
    _lib.goud_transform2d_lerp.argtypes = [FfiTransform2D, FfiTransform2D, c_float]
    _lib.goud_transform2d_lerp.restype = FfiTransform2D
    
    # Sprite functions
    _lib.goud_sprite_new.argtypes = [c_uint64]
    _lib.goud_sprite_new.restype = FfiSprite
    
    _lib.goud_sprite_default.argtypes = []
    _lib.goud_sprite_default.restype = FfiSprite
    
    _lib.goud_sprite_set_color.argtypes = [POINTER(FfiSprite), c_float, c_float, c_float, c_float]
    _lib.goud_sprite_set_color.restype = None
    
    _lib.goud_sprite_set_flip_x.argtypes = [POINTER(FfiSprite), c_bool]
    _lib.goud_sprite_set_flip_x.restype = None
    
    _lib.goud_sprite_set_flip_y.argtypes = [POINTER(FfiSprite), c_bool]
    _lib.goud_sprite_set_flip_y.restype = None
    
    _lib.goud_sprite_set_anchor.argtypes = [POINTER(FfiSprite), c_float, c_float]
    _lib.goud_sprite_set_anchor.restype = None
    
    _lib.goud_sprite_set_source_rect.argtypes = [POINTER(FfiSprite), c_float, c_float, c_float, c_float]
    _lib.goud_sprite_set_source_rect.restype = None
    
    _lib.goud_sprite_clear_source_rect.argtypes = [POINTER(FfiSprite)]
    _lib.goud_sprite_clear_source_rect.restype = None
    
    _lib.goud_sprite_set_custom_size.argtypes = [POINTER(FfiSprite), c_float, c_float]
    _lib.goud_sprite_set_custom_size.restype = None
    
    _lib.goud_sprite_clear_custom_size.argtypes = [POINTER(FfiSprite)]
    _lib.goud_sprite_clear_custom_size.restype = None
    
    _lib.goud_sprite_set_texture.argtypes = [POINTER(FfiSprite), c_uint64]
    _lib.goud_sprite_set_texture.restype = None
    
    # Sprite builder pattern functions
    _lib.goud_sprite_with_color.argtypes = [FfiSprite, c_float, c_float, c_float, c_float]
    _lib.goud_sprite_with_color.restype = FfiSprite
    
    _lib.goud_sprite_with_flip_x.argtypes = [FfiSprite, c_bool]
    _lib.goud_sprite_with_flip_x.restype = FfiSprite
    
    _lib.goud_sprite_with_flip_y.argtypes = [FfiSprite, c_bool]
    _lib.goud_sprite_with_flip_y.restype = FfiSprite
    
    _lib.goud_sprite_with_anchor.argtypes = [FfiSprite, c_float, c_float]
    _lib.goud_sprite_with_anchor.restype = FfiSprite
    
    _lib.goud_sprite_with_source_rect.argtypes = [FfiSprite, c_float, c_float, c_float, c_float]
    _lib.goud_sprite_with_source_rect.restype = FfiSprite
